# flipflop

./: .gitignore  Cargo.toml  download_input.sh  rustfmt.toml
.cargo/: config.toml
benches/: run_bench.rs
src/: lib.rs  main.rs
src/y2026/: d01.rs  d02.rs  d03.rs
